07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthconnect
spec:
  selector:
    app: healthconnect
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
